Sat Feb 24 10:27:04 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_run_tests.lst:
	  Disable the interceptor tests when the ORB is compiled without
	  interceptor support.

        * tests/run_test.lst:
	  Disable the Reactor_Notify_Test on single threaded builds, it
	  uses threads.

        * bin/nightlybuilds/scoreboard_update.pl:
	  Fixed usage message.

Sat Feb 24 09:45:18 2001  Carlos O'Ryan  <coryan@uci.edu>

	* tests/run_test.lst:
	  Disable the DLL_Test on KCC/Linux builds.  The test runs
	  normally, but crashes on shutdown(), it appears as if the
	  run-time system is invoking the destructors after the library is
	  unloaded. 

        * tests/Makefile:
        * tests/Makefile.DLL_Test:
        * tests/DLL_Test.h:
        * tests/DLL_Test.cpp:
        * tests/DLL_Test_Impl.h:
        * tests/DLL_Test_Impl.cpp:
          Cleanup code, and truly separate the shared library code to a
          completely new separate file.

Sat Feb 24 09:51:45 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Pass the -Config options to each script, this helps the
          $ACE_ROOT/bin/run_test.pl script that needs to disable some
          tests in certain configurations.

Sat Feb 24 08:21:48 2001  David L. Levine <levine@cs.wustl.edu>

        * include/makeinclude/platform_vxworks5.x_g++.GNU:
          added -fno-implicit-templates on Tornado II for Intel 386
          family targets.  Thanks to Albert Wijnja <Albert.Wijnja@meco.nl>
          for reporting that static template data members weren't really on
          VxWorks/386, and to Greg Holtmeyer <greg.holtmeyer@windriver.com>
          for confirming that -fno-implicit-templates should work with
          the Tornado II g++.  [Bug 658]

Fri Feb 23 19:44:36 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACE version 5.1.13 released.

Thu Feb 22 12:28:15 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

        * ace/TP_Reactor.cpp (handle_events): Here is the description of